@@ -1,0 +1,8 @@
+include $(top_srcdir)/common.mk
+
+moduledir = $(guilemoduledir)/overrides
+
+module_DATA = glib.defs
+
+EXTRA_DIST = $(module_DATA)
+
